# backprop-bandits-st-gallen

./: CLAUDE.md  README.md  agent_flowchart.md  docker-compose.yml
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.mcp.yml  main.py  models.py  pyproject.toml  test.py  test_mcp.py  test_sysprompt_with_db_context.py
backend/debug_contexts/: invoke_call_model_1773960034023.json  invoke_call_model_1773960096774.json  invoke_call_model_1773970637526.json  invoke_call_model_1773970640369.json  invoke_call_model_1773970644779.json  invoke_call_model_1773970649540.json  invoke_call_model_1773970657762.json  invoke_call_model_1773970660426.json  invoke_call_model_1773970666690.json  invoke_call_model_1773970668243.json  invoke_call_model_1773970674713.json  invoke_call_model_1773970677142.json  invoke_call_model_1773970682685.json  invoke_call_model_1773970688826.json  invoke_call_model_1773970780808.json  invoke_call_model_1773970782362.json  invoke_call_model_1773970783858.json  invoke_call_model_1773970787340.json  invoke_call_model_1773970800844.json  invoke_call_model_1773970811106.json  invoke_call_model_1773970816895.json  invoke_call_model_1773970859111.json  invoke_call_model_1773970872914.json  invoke_call_model_1773970881995.json  invoke_call_model_1773970891447.json  invoke_call_model_1773970898906.json  invoke_call_model_1773970907024.json  invoke_call_model_1773970916159.json  invoke_call_model_1773970931264.json  invoke_call_model_1773970938842.json  invoke_call_model_1773970946086.json  invoke_call_model_1773970959021.json  invoke_call_model_1773970964066.json  invoke_call_model_1773971562963.json  invoke_call_model_1773971565659.json  invoke_call_model_1773971567379.json  invoke_call_model_1773971570491.json  invoke_call_model_1773971572561.json  invoke_call_model_1773971584479.json  invoke_call_model_1773971595837.json  (+70 more)
backend/routers/: chat.py  feedback.py  templates.py  upload.py
backend/src/: __init__.py  agent.py  db.py  db_context.py  memory.py  server.py
backend/src/rag/: __init__.py  ingestor.py  rag_test.py  retriever.py
caseinfo/: example-data.json
frontend/: Dockerfile  README.md  package.json  (+4 more)
rag/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ingestor.py  main.py  pyproject.toml  retriever.py
(+18 files in other folders)
