[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.20",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]
